# insurance-validation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: benchmark.py  validation_demo.py
src/insurance_validation/: __init__.py  data_quality.py  discrimination.py  model_card.py  performance.py  report.py  results.py  stability.py  validation_report.py
src/insurance_validation/templates/: report.html.j2
tests/: test_data_quality.py  test_discrimination_extended.py  test_model_card.py  test_performance.py  test_performance_extended.py  test_report.py  test_results.py  test_stability.py  test_validation_report.py
