[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-validation"
version = "0.1.0"
description = "Model validation report generator for UK insurance pricing models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "model validation",
    "actuarial",
    "PRA",
    "FCA",
    "model risk",
    "SS1/23",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
