[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-validation"
version = "0.3.0"
description = "Deprecated. Use insurance-governance instead."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "model validation",
    "actuarial",
    "PRA",
    "FCA",
    "model risk",
    "SS1/23",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "insurance-governance>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_validation"]
